Fixed CSV reading, validation and writing to the DB