@@ -2,6 +2,7 @@ package eco.login.evaluation.common;
 
 import eco.login.evaluation.exception.ValidationException;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 
 import java.sql.Timestamp;
 import java.text.ParseException;
@@ -9,12 +10,12 @@ import java.text.SimpleDateFormat;
 
 @Slf4j
 public class ParseUtil {
-    private static final SimpleDateFormat dateFormat = new SimpleDateFormat("MM/dd/yyyy HH:mm");
+    private static final SimpleDateFormat dateFormat = new SimpleDateFormat("MMM dd, yyyy, h:mm:ss a");
 
     public static Integer parseInt(String text) throws ValidationException {
         log.debug("Parsing integer: " + text);
         try {
-            return (text.isBlank() || text.equalsIgnoreCase("NA")) ? null : Integer.parseInt(text);
+            return (StringUtils.isBlank(text) || text.equalsIgnoreCase("NA")) ? null : Integer.parseInt(text);
         } catch (NumberFormatException e) {
             throw new ValidationException("Not an integer. Recieved text: " + text, e);
         }
@@ -23,7 +24,7 @@ public class ParseUtil {
     public static Boolean parseBoolean(String text) throws ValidationException {
         boolean result;
         text = text.toLowerCase();
-        if (text.equals("off") || text.equals("inactive") || text.equals("0") || text.equals("false")) {
+        if (text.equals("off") || text.equals("inactive") || text.equals("0") || text.equals("false") || text.equals("na")) {
             log.debug("Parsing: " + text + " to false");
             result = Boolean.FALSE;
         } else if (text.equals("on") || text.equals("active") || text.equals("1") || text.equals("true")) {
@@ -31,7 +32,7 @@ public class ParseUtil {
 
             result = Boolean.TRUE;
         } else {
-            throw new ValidationException("Unsupported value for boolean. Allowed values (on, off, actve, inactive, 1, 0, true, false). Actual: " + text);
+            throw new ValidationException("Unsupported value for boolean. Allowed values (on, off, actve, inactive, 1, 0, true, false, na). Actual: " + text);
         }
         return result;
     }
@@ -39,7 +40,7 @@ public class ParseUtil {
     public static Double parseDouble(String text) throws ValidationException {
         log.debug("Parsing double: " + text);
         try {
-            return (text.isBlank() || text.equalsIgnoreCase("NA")) ? null : Double.parseDouble(text);
+            return (StringUtils.isBlank(text) || text.equalsIgnoreCase("NA")) ? null : Double.parseDouble(text);
         } catch (NumberFormatException e) {
             throw new ValidationException("Not a double. Recieved text: " + text, e);
 
@@ -51,7 +52,7 @@ public class ParseUtil {
         log.debug("Parsing timestamp: " + text);
         try {
             return new Timestamp(dateFormat.parse(text).getTime());
-        } catch (ParseException e) {
+        } catch (ParseException | NumberFormatException e) {
             throw new ValidationException("Text is not in correct dateFormat (expected: MM/dd/yyyy HH:mm), actual: " + text,
                     e);
         }
